--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -1,12 +1,6 @@
 ﻿<MduiNavMenu Accordion>
-    <MduiNavMenuItem Href="" Match="NavLinkMatch.All" Icon="home" IconColor="@Colors.Blue.Primary">
-        Home
-    </MduiNavMenuItem>
-    <MduiNavMenuItem Href="counter" Icon="add" IconColor="@Colors.Purple.Primary">
-        Counter
-    </MduiNavMenuItem>
-    <MduiNavMenuItem Href="fetchdata" Icon="dashboard" IconColor="@Colors.Brown.Primary">
-        Fetch data
+    <MduiNavMenuItem Icon="near_me" IconColor="@Colors.Blue.Primary" Href="" Match="NavLinkMatch.All">
+        开始使用
     </MduiNavMenuItem>
     <MduiNavMenuCollapseItem Title="样式" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
         <MduiNavMenuItem Href="ripples">Ripples</MduiNavMenuItem>
@@ -28,5 +22,8 @@
         <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
         <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
         <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
+    </MduiNavMenuCollapseItem>
+    <MduiNavMenuCollapseItem Title="资源" Icon="local_mall" IconColor="@Colors.Purple.Primary">
+        <MduiNavMenuItem Href="material_icon">Material图标</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
 </MduiNavMenu>
