--- a/MduiBlazor/Components/Input/MduiTextField.razor
+++ b/MduiBlazor/Components/Input/MduiTextField.razor
@@ -5,6 +5,6 @@
            Disabled="@Disabled" Label="@Label" Icon="@Icon" HelperText="@HelperText"
            ErrorText="@ErrorText" UseMduiTypo="@UseMduiTypo">
     <MduiInputText Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" Type="@Type" AutoFocus="@AutoFocus" Disabled="@Disabled"
-                   MaxLength="@MaxLength" Pattern="@Pattern" Placeholder="@Placeholder"
+                   MaxLength="@MaxLength" Pattern="@Pattern" Placeholder="@Placeholder" OnInput="@OnInput"
                    Readonly="@Readonly" Required="@Required" Rows="@Rows" Trim="@Trim" />
 </MduiField>
