--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <MduiLayout AppbarFixedWithToolbar PrimaryColor="@_primaryColor" AccentColor="@_accentColor"
-    IsDarkTheme="@_isDarkTheme">
+            IsDarkTheme="@_isDarkTheme">
     <MduiAppbar Fixed>
         <MduiToolbar Color="@Colors.Theme.Primary">
             <MduiIconButton Icon="menu" OnClick="_=>_open=!_open" />
@@ -16,7 +16,7 @@
             <MduiIconButton Href="https://github.com/gaofen13/mdui-blazor">
                 <svg viewBox="0 0 36 36">
                     <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff"
-                        d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z">
+                          d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z">
                     </path>
                 </svg>
             </MduiIconButton>
@@ -42,69 +42,156 @@
 
     <MduiDialog @bind-Open="@_showThemeDialog" Title="设置文档主题" Options="@(new DialogOptions{ Modal = true})">
         <ChildContent>
-            <div class="mdui-layout">
+            <div class="mdui-container">
                 <p>
                     <MduiText Typo="@Typo.title">主题色</MduiText>
                 </p>
                 <MduiRadioGroup @bind-Value="@_isDarkTheme">
                     <div class="mdui-row-xs-1 mdui-row-sm-2">
-                        <MduiRadio Class="mdui-col" Value="@false">Light</MduiRadio>
-                        <MduiRadio Class="mdui-col" Value="@true">Dark</MduiRadio>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Value="@false">Light</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Value="@true">Dark</MduiRadio>
+                        </div>
                     </div>
                 </MduiRadioGroup>
                 <p>
                     <MduiText Typo="@Typo.title" Color="@Colors.Theme.Primary">主色</MduiText>
                 </p>
-                <MduiRadioGroup Class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3" @bind-Value="@_primaryColor">
-                    <MduiRadio Class="mdui-col mdui-text-color-amber" Value="@PrimaryColor.Amber">Amber</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-blue" Value="@PrimaryColor.Blue">Blue</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-blue-grey" Value="@PrimaryColor.BlueGrey">BlueGrey
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-brown" Value="@PrimaryColor.Brown">Brown</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-cyan" Value="@PrimaryColor.Cyan">Cyan</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-deep-orange" Value="@PrimaryColor.DeepOrange">DeepOrange
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-deep-purple" Value="@PrimaryColor.DeepPurple">DeepPurple
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-green" Value="@PrimaryColor.Green">Green</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-grey" Value="@PrimaryColor.Grey">Grey</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-indigo" Value="@PrimaryColor.Indigo">Indigo</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-light-blue" Value="@PrimaryColor.LightBlue">LightBlue
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-light-green" Value="@PrimaryColor.LightGreen">LightGreen
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-lime" Value="@PrimaryColor.Lime">Lime</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-orange" Value="@PrimaryColor.Orange">Orange</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-pink" Value="@PrimaryColor.Pink">Pink</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-purple" Value="@PrimaryColor.Purple">Purple</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-red" Value="@PrimaryColor.Red">Red</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-teal" Value="@PrimaryColor.Teal">Teal</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-yellow" Value="@PrimaryColor.Yellow">Yellow</MduiRadio>
+                <MduiRadioGroup @bind-Value="@_primaryColor">
+                    <div class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3">
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-amber" Value="@PrimaryColor.Amber">Amber</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-blue" Value="@PrimaryColor.Blue">Blue</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-blue-grey" Value="@PrimaryColor.BlueGrey">
+                                BlueGrey
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-brown" Value="@PrimaryColor.Brown">Brown</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-cyan" Value="@PrimaryColor.Cyan">Cyan</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-deep-orange" Value="@PrimaryColor.DeepOrange">
+                                DeepOrange
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-deep-purple" Value="@PrimaryColor.DeepPurple">
+                                DeepPurple
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-green" Value="@PrimaryColor.Green">Green</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-grey" Value="@PrimaryColor.Grey">Grey</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-indigo" Value="@PrimaryColor.Indigo">Indigo</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-light-blue" Value="@PrimaryColor.LightBlue">
+                                LightBlue
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-light-green" Value="@PrimaryColor.LightGreen">
+                                LightGreen
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-lime" Value="@PrimaryColor.Lime">Lime</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-orange" Value="@PrimaryColor.Orange">Orange</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-pink" Value="@PrimaryColor.Pink">Pink</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-purple" Value="@PrimaryColor.Purple">Purple</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-red" Value="@PrimaryColor.Red">Red</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-teal" Value="@PrimaryColor.Teal">Teal</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-yellow" Value="@PrimaryColor.Yellow">Yellow</MduiRadio>
+                        </div>
+                    </div>
                 </MduiRadioGroup>
                 <p>
                     <MduiText Typo="@Typo.title" Color="@Colors.Theme.Accent">强调色</MduiText>
                 </p>
-                <MduiRadioGroup Class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3" @bind-Value="@_accentColor">
-                    <MduiRadio Class="mdui-col mdui-text-color-amber" Value="@AccentColor.Amber">Amber</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-blue" Value="@AccentColor.Blue">Blue</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-cyan" Value="@AccentColor.Cyan">Cyan</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-deep-orange" Value="@AccentColor.DeepOrange">DeepOrange
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-deep-purple" Value="@AccentColor.DeepPurple">DeepPurple
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-green" Value="@AccentColor.Green">Green</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-indigo" Value="@AccentColor.Indigo">Indigo</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-light-blue" Value="@AccentColor.LightBlue">LightBlue
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-light-green" Value="@AccentColor.LightGreen">LightGreen
-                    </MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-lime" Value="@AccentColor.Lime">Lime</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-orange" Value="@AccentColor.Orange">Orange</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-pink" Value="@AccentColor.Pink">Pink</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-purple" Value="@AccentColor.Purple">Purple</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-red" Value="@AccentColor.Red">Red</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-teal" Value="@AccentColor.Teal">Teal</MduiRadio>
-                    <MduiRadio Class="mdui-col mdui-text-color-yellow" Value="@AccentColor.Yellow">Yellow</MduiRadio>
+                <MduiRadioGroup @bind-Value="@_accentColor">
+                    <div class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3">
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-amber" Value="@AccentColor.Amber">Amber</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-blue" Value="@AccentColor.Blue">Blue</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-cyan" Value="@AccentColor.Cyan">Cyan</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-deep-orange" Value="@AccentColor.DeepOrange">
+                                DeepOrange
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-deep-purple" Value="@AccentColor.DeepPurple">
+                                DeepPurple
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-green" Value="@AccentColor.Green">Green</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-indigo" Value="@AccentColor.Indigo">Indigo</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-light-blue" Value="@AccentColor.LightBlue">
+                                LightBlue
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-light-green" Value="@AccentColor.LightGreen">
+                                LightGreen
+                            </MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-lime" Value="@AccentColor.Lime">Lime</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-orange" Value="@AccentColor.Orange">Orange</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-pink" Value="@AccentColor.Pink">Pink</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-purple" Value="@AccentColor.Purple">Purple</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-red" Value="@AccentColor.Red">Red</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-teal" Value="@AccentColor.Teal">Teal</MduiRadio>
+                        </div>
+                        <div class="mdui-col mdui-m-b-1">
+                            <MduiRadio Class="mdui-text-color-yellow" Value="@AccentColor.Yellow">Yellow</MduiRadio>
+                        </div>
+                    </div>
                 </MduiRadioGroup>
             </div>
         </ChildContent>
