--- a/MduiBlazor.Shared/Pages/MaterialIcons.razor
+++ b/MduiBlazor.Shared/Pages/MaterialIcons.razor
@@ -3,7 +3,7 @@
 <div class="mdui-container">
     <div class="mdui-row" style="margin-top: 80px">
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
-        <MduiTextField OnInput="@OnSearchChanged" Class="mdui-col-xs-12 mdui-col-sm-10 mdui-col-md-8" FloatingLabel Label="ÊäÈëÍ¼±êÃûËÑË÷" />
+        <MduiTextField OnInput="@OnSearchChanged" Class="mdui-col-xs-12 mdui-col-sm-10 mdui-col-md-8" FloatingLabel Label="è¾“å…¥å›¾æ ‡åæœç´¢" />
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
     </div>
 
