--- a/MduiBlazor.Shared/Pages/MaterialIcons.razor
+++ b/MduiBlazor.Shared/Pages/MaterialIcons.razor
@@ -1,6 +1,6 @@
 @page "/material_icon"
 
-<div class="mdui-container">
+<div class="mdui-container-fluid">
     <div class="mdui-row" style="margin-top: 80px">
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
         <MduiTextField OnInput="@OnSearchChanged" Class="mdui-col-xs-12 mdui-col-sm-10 mdui-col-md-8" FloatingLabel Label="输入图标名搜索" />
