--- a/MduiBlazor.Shared/Pages/MaterialIcons.razor
+++ b/MduiBlazor.Shared/Pages/MaterialIcons.razor
@@ -1,25 +1,28 @@
 @page "/material_icon"
 
 <div class="mdui-container-fluid">
-    <div class="mdui-row" style="margin-top: 80px">
+    <div class="mdui-row mdui-m-y-4">
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
-        <MduiTextField OnInput="@OnSearchChanged" Class="mdui-col-xs-12 mdui-col-sm-10 mdui-col-md-8" FloatingLabel Label="输入图标名搜索" />
+        <MduiTextField @bind-Value="@_searchInput" OnInput="@OnSearchChanged" Class="mdui-col-xs-12 mdui-col-sm-10 mdui-col-md-8" FloatingLabel
+            Label="输入图标名搜索" />
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
     </div>
 
-    <div class="mdui-m-y-2 mdui-row-xs-3 mdui-row-sm-4 mdui-row-md-6 mdui-row-lg-8">
+    <div class="mdui-m-y-3 mdui-row-xs-3 mdui-row-sm-4 mdui-row-md-6 mdui-row-lg-8">
         @foreach (var item in _showIcons)
         {
-            <div class="mdui-col mdui-text-center mdui-m-a-3" @onclick="_=>OnClickIconItem(item.Name)">
+            <div class="mdui-col mdui-text-center mdui-p-y-3" style="height:120px;cursor:pointer;"
+            @onclick="_=>OnClickIconItem(item.Name)">
                 <MduiIcon Class="mdui-m-y-1" Style="font-size:48px;" Name="@item.Name" Color="@Colors.Grey.Primary6" />
                 <br />
-                <MduiText Typo="@Typo.body2">@item.Name</MduiText>
+                <MduiText Typo="@Typo.caption" Color="@Colors.Grey.Primary6" Style="overflow-wrap:break-word">@item.Name
+                </MduiText>
             </div>
         }
     </div>
 </div>
 
-<MduiDialog Open="@_show" Options="@(new DialogOptions{Modal=true})">
+<MduiDialog @bind-Open="@_show" Options="@(new DialogOptions{Modal=true})">
     <MduiIcon Name="@_selectedIcon" />
-    <pre><code>&lt;MduiIcon Name=&quot;@_selectedIcon&quot; /&gt;</code></pre>
+    <CodeSnippet>&lt;MduiIcon Name=&quot;@_selectedIcon&quot; /&gt;</CodeSnippet>
 </MduiDialog>
