--- a/MduiBlazor.Shared/_Imports.razor
+++ b/MduiBlazor.Shared/_Imports.razor
@@ -2,3 +2,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using MduiBlazor.Shared.Shared
 @using MduiBlazor.Shared.Data
+@using MduiBlazor.Shared.Components
