--- a/MduiBlazor.Shared/Components/CodeSnippet.razor.css
+++ b/MduiBlazor.Shared/Components/CodeSnippet.razor.css
@@ -1,11 +1,15 @@
 ﻿.snippet {
     margin-bottom: 0.5rem;
-    border: 1px solid #d6d6d6;
+    border: 1px solid #b6b6b6;
     border-radius: 4px;
 }
 
 ::deep .hljs {
     background-color: #f3f3f3;
+}
+
+.mdui-theme-layout-dark .hljs {
+    background-color: #a3a3a3;
 }
 
 ::deep .hljs-copy-button {
