fix button href

--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+    <title>MduiBlazor</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="_content/MduiBlazor/css/mdui.css" />
@@ -18,8 +19,10 @@
     <link rel="stylesheet" href="_content/MduiBlazor.Shared/MduiBlazor.Shared.bundle.scp.css" />
 
     <!-- highlight -->
-    <link rel="stylesheet" title="light" href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" title="dark" disabled="disabled" href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs2015.min.css">
+    <link rel="stylesheet" title="light"
+        href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs.min.css">
+    <link rel="stylesheet" title="dark" disabled="disabled"
+        href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs2015.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.css">
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
@@ -42,9 +45,12 @@
     <script src="_framework/blazor.server.js"></script>
 
     <!-- highlight -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/highlight.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@@2.1.1/dist/cshtml-razor.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/highlight.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@@2.1.1/dist/cshtml-razor.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.js"></script>
     <script>
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
