--- a/MduiBlazor.Shared/Components/CodeSnippet.razor
+++ b/MduiBlazor.Shared/Components/CodeSnippet.razor
@@ -1,5 +1,3 @@
-﻿<pre class="snippet">
-<code @ref="codeElement" class="@Language" style="@Style">
+﻿<pre class="snippet mdui-typo"><code @ref="codeElement" class="@Language" style="@Style">
         @ChildContent
-        </code>
-        </pre>
+</code></pre>
