--- a/MduiBlazor.Shared/Pages/Cards.razor
+++ b/MduiBlazor.Shared/Pages/Cards.razor
@@ -1,7 +1,7 @@
 @page "/cards"
 
 <h2>完整 HTML 结构</h2>
-<div class="mdui-p-a-2">
+<div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard Title="Title" SubTitle="Subtitle">
         <HeaderContent>
             <MduiCardHeader Title="Title" SubTitle="Subtitle"
@@ -26,7 +26,7 @@
 </div>
 
 <h2>覆盖在媒体元素上</h2>
-<div class="mdui-p-a-2">
+<div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered Title="Title" SubTitle="Subtitle"
@@ -40,7 +40,7 @@
 </div>
 
 <h2>覆盖在媒体元素上</h2>
-<div class="mdui-p-a-2">
+    <div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered Title="Title" SubTitle="Subtitle"
@@ -55,7 +55,7 @@
 </div>
 
 <h2>在 .mdui-card-media-covered 上添加类 .mdui-card-media-covered-top 使覆盖层位于媒体元素顶部。</h2>
-<div class="mdui-p-a-2">
+    <div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered CoveredTop Title="Title" SubTitle="Subtitle"
@@ -69,7 +69,7 @@
 </div>
 
 <h2>在 .mdui-card-media-covered 上添加类 .mdui-card-media-covered-transparent 使覆盖层拥有透明背景。</h2>
-<div class="mdui-p-a-2">
+    <div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered CoveredTransparent Title="Title" SubTitle="Subtitle"
@@ -83,7 +83,7 @@
 </div>
 
 <h2>在 .mdui-card-media-covered 上添加类 .mdui-card-media-covered-gradient 使覆盖层拥有渐变背景。</h2>
-<div class="mdui-p-a-2">
+    <div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard>
         <MediaContent>
             <MduiCardMedia Covered CoveredGradient Title="Title" SubTitle="Subtitle"
@@ -97,7 +97,7 @@
 </div>
 
 <h2>按钮竖直排列</h2>
-<div class="mdui-p-a-2">
+    <div class="mdui-p-a-2" style="max-width:360px;">
     <MduiCard ActionsStacked>
         <MediaContent>
             <MduiCardMedia Covered CoveredGradient Title="Title" SubTitle="Subtitle"
