--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -55,6 +55,13 @@
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
         }
+
+        function HighlightCode(code) {
+            if (typeof hljs != "undefined" && hljs != null && code != null) {
+                res = hljs.highlightAuto(code);
+            }
+            return res.value ?? "";
+        }
     </script>
 </body>
 
