--- a/MduiBlazor.Shared/_Imports.razor
+++ b/MduiBlazor.Shared/_Imports.razor
@@ -3,3 +3,4 @@
 @using MduiBlazor.Shared.Shared
 @using MduiBlazor.Shared.Data
 @using MduiBlazor.Shared.Components
+@using MduiBlazor.Shared.Pages.Examples
