--- a/MduiBlazor.Shared/Pages/MaterialIcons.razor
+++ b/MduiBlazor.Shared/Pages/MaterialIcons.razor
@@ -24,5 +24,5 @@
 
 <MduiDialog @bind-Open="@_show" Options="@(new DialogOptions{Modal=true})">
     <MduiIcon Name="@_selectedIcon" />
-    <CodeSnippet>&lt;MduiIcon Name=&quot;@_selectedIcon&quot; /&gt;</CodeSnippet>
+    <CodeSnippet>@IconCodeContents</CodeSnippet>
 </MduiDialog>
