--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -19,10 +19,7 @@
     <link rel="stylesheet" href="_content/MduiBlazor.Shared/MduiBlazor.Shared.bundle.scp.css" />
 
     <!-- highlight -->
-    <link rel="stylesheet" title="light"
-        href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" title="dark" disabled="disabled"
-        href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs2015.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@highlightjs/cdn-assets@@11.6.0/styles/vs.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@@1.0.3/dist/highlightjs-copy.min.css">
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
