--- a/MduiBlazor.Shared/Components/CodeSnippet.razor
+++ b/MduiBlazor.Shared/Components/CodeSnippet.razor
@@ -1,3 +1,3 @@
-﻿<pre class="@Classname"><code class="hljs @Language" style="@Style">
+﻿<pre class="@Classname"><code @ref="@_codeElement" class="@Language" style="@Style">
         @ChildContent
 </code></pre>
