--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -9,7 +9,8 @@
     <MduiNavMenuCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
         <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
         <MduiNavMenuItem Href="bottomnav">BottomNav</MduiNavMenuItem>
-        <MduiNavMenuItem Href="buttons">Buttons</MduiNavMenuItem>
+        <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
+        <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
         <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
