--- a/MduiBlazor/Components/Button/MduiFabMenu.razor
+++ b/MduiBlazor/Components/Button/MduiFabMenu.razor
@@ -6,7 +6,7 @@
         <MduiIcon Name="@Icon" />
         <MduiIcon Name="@OpenedIcon" Class="mdui-fab-opened" />
     </button>
-    <div class="@DialClassname" style="height:auto">
+    <div class="@DialClassname" style="@DialStylelist">
         @ChildContent
     </div>
 </div>
