--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -1,7 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiButtonBase
 
-<MduiButton Class="@Classname" Style="@Style" @attributes="@AdditionalAttributes" ButtonType="@ButtonType"
+<MduiButton Class="@Classname" Style="@Style" @attributes="@AdditionalAttributes" UseMduiTypo="@UseMduiTypo" ButtonType="@ButtonType"
     Color="@Color" Dense="@Dense" Disabled="@Disabled" Href="@Href" Target="@Target" HtmlTag="@HtmlTag"
     DisableRipple="@DisableRipple" DisableRaised="@true" OnClick="@OnClick" Command="@Command"
     CommandParameter="@CommandParameter">
