--- a/MduiBlazor/Components/Button/MduiFab.razor
+++ b/MduiBlazor/Components/Button/MduiFab.razor
@@ -1,5 +1,5 @@
 ﻿@namespace MduiBlazor
-@inherits MduiButtonBase
+@inherits MduiComponentBase
 
 <button class="@Classname" style="@Style" @attributes="@AdditionalAttributes" @onclick="@OnClick">
     <MduiIcon Name="@Icon" Class="@IconClass" Color="@IconColor" />
